修改的项目

--- a/src/pages/home/com/sample/style.less
+++ b/src/pages/home/com/sample/style.less
@@ -1,38 +1,40 @@
 .Sample{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  .SampleBoy{
-      width: 30%;
-      margin-bottom: 0.4rem;
-      background: white;
-      border-radius: 0.1rem;
-      box-shadow: 7px 7px gray;
-      p:nth-child(1){
-        width: 100%;
-        padding: 0.2rem;
-        box-sizing: border-box;
-        
-        .Sampletit{
-            font-size:0.2rem;
-            font-weight: 900;
-         }
-         .Sampletit2{
-           font-size:0.16rem;
-           font-weight:500;
-           color: gray;
-         }
-      }
-    p:nth-child(2){
-        padding:0rem 0.2rem;
-        box-sizing: border-box;
-        border-top: 0.01rem solid #ccc;
-        width: 100%;
-        text-align: center;
-      .SampleName{
-        font-size:0.18rem;
-        font-weight: 900;
+  .SampleList{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    .SampleBoy{
+        width: 30%;
+        margin-bottom: 0.4rem;
+        background: white;
+        border-radius: 0.1rem;
+        box-shadow: 7px 7px gray;
+        p:nth-child(1){
+          width: 100%;
+          padding: 0.2rem;
+          box-sizing: border-box;
+          
+          .Sampletit{
+              font-size:0.2rem;
+              font-weight: 900;
+          }
+          .Sampletit2{
+            font-size:0.16rem;
+            font-weight:500;
+            color: gray;
+          }
+        }
+      p:nth-child(2){
+          padding:0rem 0.2rem;
+          box-sizing: border-box;
+          border-top: 0.01rem solid #ccc;
+          width: 100%;
+          text-align: center;
+        .SampleName{
+          font-size:0.18rem;
+          font-weight: 900;
+        }
       }
     }
   }
